--- a/JavaScript/chat-app/client/src/index.css
+++ b/JavaScript/chat-app/client/src/index.css
@@ -229,7 +229,7 @@
   padding: 10px;
   border-radius: 10px;
   margin-left: auto;
-  font-size: 15pxM
+  font-size: 15px;
 }
 
 .message__chats > p {
@@ -246,4 +246,38 @@
   font-size: 13px;
   font-style: italic;
   opacity: 0.3;
+}
+
+@media screen and (max-width: 658px) {
+  .chat__sidebar {
+    width: 30%;
+    padding: 10px;
+  }
+
+  .chat__sidebar h2 {
+    font-size: 12px;
+  }
+
+  .chat__sidebar h4 {
+    font-size: 10px;
+  }
+
+  .chat__sidebar p {
+    font-size: 13.5px;
+  }
+  
+  .chat__main {
+    height: 100%;
+  }
+
+  .message__recipient {
+    font-size: 12px;
+    width: 70%;
+  }
+
+  .message__sender {
+    font-size: 12px;
+    width: 70%;
+  }
+  
 }
